--- a/styles.css
+++ b/styles.css
@@ -17,6 +17,8 @@ body {
 
 }
 
+
+
 .btn {
   margin: 25px;
   display: inline-block;
@@ -24,6 +26,37 @@ body {
   width: 200px;
   border: 10px solid black;
   border-radius: 20%;
+}
+
+@media (max-height: 740px) {
+
+  .btn {
+  margin: 5px;
+  display: inline-block;
+  height: 60px;
+  width: 60px;
+  border: 10px solid black;
+  border-radius: 20%;
+}
+
+#level-title {
+  font-family: 'Press Start 2P', cursive;
+  font-size: 0.2rem;
+  margin:  1%;
+  color: #FEF2BF;
+}
+
+#arey {
+  width:75px;
+  height:50px;
+  text-align: center;
+  font-family: 'Press Start 2P', cursive;
+  background-color:#FEF2BF;
+  font-size: 10px;
+  margin-bottom: 25px;
+}
+
+  
 }
 
 .mybtn {
